--- a/admin/style/scss/partials/_layout.scss
+++ b/admin/style/scss/partials/_layout.scss
@@ -526,7 +526,6 @@ body.dark-mode.upgrade-mode {
 }
 
 @media screen and (width <= $mobile-screen) {
-  #top-info-blog label,
   .nomobile {
     display: none;
   }
